# tainter

./: .gitignore  FIXES_SUMMARY.md  README.md  TECHNICAL_DETAILS.md  fsecret_report.json  pyproject.toml  report.json  report_fixed.json  secret_report.json
.agent/: instructions.md
.github/workflows/: ci.yml  python-publish.yml
docs/superpowers/plans/: 2026-04-24-multi-language-support.md
docs/superpowers/specs/: 2026-04-24-multi-language-support-design.md
src/tainter/: __init__.py  cli.py  engine.py
src/tainter/analysis/: __init__.py  base_flow_finder.py  flow_finder.py  go_flow_finder.py  java_flow_finder.py  javascript_flow_finder.py  propagation.py  taint_tracker.py
src/tainter/core/: __init__.py  types.py
src/tainter/graph/: __init__.py  call_graph.py  data_flow.py
src/tainter/models/: __init__.py  registry.py  sanitizers.py  sinks.py  sources.py
src/tainter/models/lang/: __init__.py
src/tainter/models/lang/go/: sanitizers.py  sinks.py  sources.py
src/tainter/models/lang/java/: __init__.py  sanitizers.py  sinks.py  sources.py
src/tainter/models/lang/javascript/: sanitizers.py  sinks.py  sources.py
src/tainter/models/lang/python/: __init__.py  sanitizers.py  sinks.py  sources.py
src/tainter/parser/: __init__.py  ast_parser.py  base.py  file_finder.py  go_parser.py  java_parser.py  javascript_parser.py  python_parser.py
src/tainter/reporters/: __init__.py  console_reporter.py  json_reporter.py  sarif_reporter.py
tests/: __init__.py  test_engine.py  test_go_analysis.py  test_java_analysis.py  test_javascript_analysis.py  test_models.py  test_parser.py  test_regressions.py
tests/fixtures/: vuln_app.py
vuln_demo/: README.md  app.py  config.py  requirements.txt  vuln_module.py
vuln_demo/services/: __init__.py  data_service.py  file_service.py  user_service.py
