[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tainter"
version = "1.0.2"
description = "A taint analysis engine for identifying source-to-sink vulnerability flows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hrishikesh Nate", email = "ihrishikeshnate@gmail.com" }
]
maintainers = [
    { name = "Hrishikesh Nate", email = "ihrishikeshnate@gmail.com" }
]
keywords = ["security", "static-analysis", "taint-analysis", "vulnerability", "sast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/ihrishikesh0896/tainter"
Repository = "https://github.com/ihrishikesh0896/tainter"
"Bug Tracker" = "https://github.com/ihrishikesh0896/tainter/issues"

[project.optional-dependencies]
java = [
    "tree-sitter>=0.21.0",
    "tree-sitter-java>=0.21.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tainter = "tainter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tainter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "PT", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
